[tool.poetry]
name = "hello-ray"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]

[tool.poetry.dependencies]
python = "3.8"
ray = {extras = ["serve"], version = "^1.7.0"}
whylogs = "^0.6.11"
pyarrow = "^5.0.0"
fsspec = "^2021.10.0"
modin = {extras = ["ray"], version = "^0.11.1"}
mlflow = "^1.20.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
