[tool.poetry]
name = "hello-ray"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]

[tool.poetry.dependencies]
python = "3.8"
ray = {version = "1.8.0", extras = ["serve"]}
whylogs = "^0.6.11"
pyarrow = "^6.0.0"
pydantic = "^1.8.2"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
