[tool.poetry]
name = "hello-ray"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]

[tool.poetry.dependencies]
python = "3.8"
ray = {extras = ["serve"], version = "^2.0.0"}
whylogs = "1.1.1"
pyarrow = "^6.0.0"
pydantic = "^1.8.2"
fastapi = "^0.70.0"
pandas = "^1.5.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
